--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,28 +1,45 @@
-name: Build and Run RAG Assistant
+name: 🚀 Docker CI/CD for RAG Assistant
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: 📥 Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Login to DockerHub (optional if using DockerHub)
-      if: secrets.DOCKERHUB_USERNAME != ''
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: 📦 Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Build and run container
-      run: |
-        docker build -t rag-assistant .
-        docker run --env OPENROUTER_API_KEY=${{ secrets.OPENROUTER_API_KEY }} -p 8000:8000 -p 8501:8501 rag-assistant
+      - name: 🔐 DockerHub Login
+        env:
+          USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: |
+          if [ -n "$USERNAME" ] && [ -n "$TOKEN" ]; then
+            echo "$TOKEN" | docker login -u "$USERNAME" --password-stdin
+          else
+            echo "🚫 DockerHub credentials not set. Skipping login."
+            exit 1
+          fi
+
+      - name: 🛠️ Build Docker Image
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/rag-assistant .
+
+      - name: 🚀 Push Docker Image
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/rag-assistant
+
+      - name: ✅ Done
+        run: echo "🎉 Deployment complete!"
