--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,45 +1,50 @@
-name: 🚀 Docker CI/CD for RAG Assistant
+name: 🚀 Build and Deploy RAG Assistant
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    env:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+
     steps:
-      - name: 📥 Checkout Code
+      - name: 📥 Checkout code
         uses: actions/checkout@v3
 
       - name: 🐍 Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
-      - name: 📦 Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      - name: 📦 Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: 🔐 DockerHub Login
-        env:
-          USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: 🔐 DockerHub Login (if secrets exist)
         run: |
-          if [ -n "$USERNAME" ] && [ -n "$TOKEN" ]; then
-            echo "$TOKEN" | docker login -u "$USERNAME" --password-stdin
+          if [ -n "$DOCKERHUB_USERNAME" ] && [ -n "$DOCKERHUB_TOKEN" ]; then
+            echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
           else
             echo "🚫 DockerHub credentials not set. Skipping login."
-            exit 1
           fi
 
-      - name: 🛠️ Build Docker Image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/rag-assistant .
+      - name: 🛠️ Build Docker image
+        run: docker build -t rag-assistant .
 
-      - name: 🚀 Push Docker Image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/rag-assistant
+      - name: 📤 Push Docker image (optional)
+        run: |
+          if [ -n "$DOCKERHUB_USERNAME" ]; then
+            docker tag rag-assistant "$DOCKERHUB_USERNAME/rag-assistant:latest"
+            docker push "$DOCKERHUB_USERNAME/rag-assistant:latest"
+          else
+            echo "🚫 Skipping push. No username set."
+          fi
 
       - name: ✅ Done
-        run: echo "🎉 Deployment complete!"
+        run: echo "✅ CI/CD pipeline completed successfully!"
