--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,4 +1,4 @@
-name: 🚀 Build and Deploy RAG Assistant
+name:  Build and Deploy RAG Assistant
 
 on:
   push:
@@ -15,18 +15,18 @@ jobs:
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
     steps:
-      - name: 📥 Checkout code
+      - name:  Checkout code
         uses: actions/checkout@v3
 
-      - name: 🐍 Set up Python
+      - name:  Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
-      - name: 📦 Set up Docker Buildx
+      - name:  Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: 🔐 DockerHub Login (if secrets exist)
+      - name:  DockerHub Login (if secrets exist)
         run: |
           if [ -n "$DOCKERHUB_USERNAME" ] && [ -n "$DOCKERHUB_TOKEN" ]; then
             echo "$DOCKERHUB_TOKEN" | docker login -u "$DOCKERHUB_USERNAME" --password-stdin
@@ -34,17 +34,17 @@ jobs:
             echo "🚫 DockerHub credentials not set. Skipping login."
           fi
 
-      - name: 🛠️ Build Docker image
+      - name:  Build Docker image
         run: docker build -t rag-assistant .
 
-      - name: 📤 Push Docker image (optional)
+      - name:  Push Docker image (optional)
         run: |
           if [ -n "$DOCKERHUB_USERNAME" ]; then
             docker tag rag-assistant "$DOCKERHUB_USERNAME/rag-assistant:latest"
             docker push "$DOCKERHUB_USERNAME/rag-assistant:latest"
           else
-            echo "🚫 Skipping push. No username set."
+            echo " Skipping push. No username set."
           fi
 
-      - name: ✅ Done
-        run: echo "✅ CI/CD pipeline completed successfully!"
+      - name:  Done
+        run: echo " CI/CD pipeline completed successfully!"
