--- a/Dockerfile.build-frontend
+++ b/Dockerfile.build-frontend
@@ -3,14 +3,18 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-# Copy frontend code
-COPY frontend/ /app
+# Copy only the requirements file first (enables better Docker layer caching)
+COPY frontend/requirements.txt /app/requirements.txt
 
 # Install dependencies
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# Ensure script is executable
-RUN chmod +x start-frontend.sh
+# Now copy the rest of the frontend code
+COPY frontend/ /app
 
 # Run Streamlit
+CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
+
+COPY frontend/start-frontend.sh /app/
+RUN chmod +x /app/start-frontend.sh
 CMD ["./start-frontend.sh"]
